alignment fixes in career page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2214,7 +2214,7 @@ textarea {
   margin-top: 1.875rem;
 }
 
-.faq-section {
+.faq-section-career {
   margin-bottom: 1.25rem;
 }
 .faq-block {
